# SonoGestures

./: .gitignore  :wq  CMakeLists.txt  CalcShift.cpp  CallOtherScripts.py  CaptureSerialCSV.py  ContinuousPredictions.cpp  CrossDataAnalysis.py  CrossValidate.py  CrossValidateAll.py  CrossValidateNN.py  CrossValidateNNHalves.py  CrossValidateSVM.py  FeatureFlowVectors.cpp  FeatureFramesMoments.cpp  FeatureGestureFlowMag.cpp  FeaturesAll.dat.model  FeaturesAll.dat.range  GenerateFeatures.py  GraphConfusionMatrix.py  LinearRegression.py  LongitudinalMotionMagnitudes.dat.scale  MotionGraph  NNReg.py  NNRegCross.py  OpenSonoGestures  RCserver.py  README.md  RemapVideos.cpp  SonoGesturesMVC.sln  SplitClips  checkcl.cpp  cropscript  easy.py  extract.py  graph.py  graph2.txt  graph_lpa.txt  graphdata.txt  graphdata_avg_intensity.txt  (+19 more)
Arduino/gloveControl/: gloveControl.ino
Arduino/hand/: hand.ino
Arduino/readGlove/: readGlove.ino
Arduino/testServos/: testServos.ino
MSVC/: SonoGesturesMVC.vcxproj
misc/: RCclient.py  RCserver.py  qtvlc.py  removeOpenCLAvail.py  renameGloveFiles.py  run.sh  splitclips.py
misc/MSVC/: SonoGesturesMVC.vcxproj  SonoGesturesMVC.vcxproj.filters
scripts/: cropscript.sh  features_script.sh  motionscript.sh  scriptNNRegCross.sh
test25Feb/: 1  3
