cmake_minimum_required(VERSION 2.8.12)

project(OpenSonoGestures)

find_package(OpenCV REQUIRED)
include_directories(${OpenCV_INCLUDE_DIRS})

add_executable(FeatureGestureFlowMag FeatureGestureFlowMag.cpp)
add_executable(FeatureFramesMoments FeatureFramesMoments.cpp)
add_executable(SplitClips splitclips.cpp)
add_executable(MotionGraph motiongraph.cpp)
add_executable(CheckOpenCL checkcl.cpp)
add_executable(ViewFlow viewflow.cpp)
add_executable(ViewFeatures viewfeatures.cpp)
target_link_libraries(FeatureGestureFlowMag ${OpenCV_LIBS})
target_link_libraries(FeatureFramesMoments ${OpenCV_LIBS})
target_link_libraries(SplitClips ${OpenCV_LIBS})
target_link_libraries(MotionGraph ${OpenCV_LIBS})
target_link_libraries(ViewFlow ${OpenCV_LIBS})
target_link_libraries(ViewFeatures ${OpenCV_LIBS})
